--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/fullstack
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net/heroku_61782655792c918?password=8e50ad00&reconnect=true&user=b935b7a833025e
+spring.datasource.username=b935b7a833025e
+spring.datasource.password=8e50ad00
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
